<resources>
    <string name="app_name">MathQuest</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_play">How to play : \nThe sum of the two lower figures must be equal to the number in the upper figure</string>
    <string name="welcome_to_mathquest">Welcome to MathQuest</string>
    <string name="next_btn">next</string>
    <string name="welcome_image">welcome_image</string>
    <string name="choose_your_level">Choose your level:</string>
    <string name="easy_button_text">easy</string>
    <string name="testing_button_text">testing</string>
    <string name="medium_text_button">medium</string>
    <string name="hard_text_button">hard</string>
    <string name="correct_answers_s_min_s">Correct answers %s (min: %s</string>
    <string name="try_again">try again</string>
    <string name="your_score_s">Your score: %s</string>
</resources>